--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appnope==0.1.0
+attrs==19.3.0
 backcall==0.1.0
 certifi==2020.4.5.1
 chardet==3.0.4
@@ -13,12 +14,19 @@ itsdangerous==1.1.0
 jedi==0.17.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+more-itertools==8.2.0
+packaging==20.3
 parso==0.7.0
 pexpect==4.8.0
 pickleshare==0.7.5
+pluggy==0.13.1
 prompt-toolkit==3.0.5
 ptyprocess==0.6.0
+py==1.8.1
 Pygments==2.6.1
+pyparsing==2.4.7
+pytest==5.4.1
+pytest-flask==1.0.0
 redis==3.4.1
 requests==2.23.0
 six==1.14.0
